objects/LAT_ActionClientPayment__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccountInAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Foco</label>
        <referenceTo>LAT_AccountInAction__c</referenceTo>
        <relationshipLabel>Action Client Payments</relationshipLabel>
        <relationshipName>LAT_ActionClientPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Action Client Payments</relationshipLabel>
        <relationshipName>Action_Client_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_TaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atividade criada</label>
        <type>Checkbox</type>
    </fields>
    <label>Action Client Payment</label>
    <nameField>
        <displayFormat>APN-{0000}</displayFormat>
        <label>Action Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Client Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>